<resources>
    <string name="app_name">SmartSeat</string>
    <string name="she_zhi">Set</string>
    <string name="bang_zhu">The required permissions are missing. Go to permissions to open the required permissions.</string>
    <string name="cancel">Cancel</string>
    <string name="system_hint">System</string>
    <string name="title_activity_history_data_show">HistoryDataShowActivity</string>
    <string name="CFBundleDisplayName">"心魔镜"</string>
    <string name="CFBundleName">"Anura"</string>
    <string name="NSCameraUsageDescription">"我们将使用摄像头来进行测量"</string>
    <string name="NSPhotoLibraryAddUsageDescription">"测量结果将会保存到您的相册"</string>
    <string name="NSPhotoLibraryUsageDescription">"我们需要访问您的相册来获取个人资料"</string>
    <string name="Error_Title_Analyzer_Failed">"分析失败"</string>
    <string name="Analyzing_Data">"正在分析数据"</string>
    <string name="Title_Confirm_Skip_Profile">"您确定暂不注册信息吗？"</string>
    <string name="BPM">BPM</string>
    <string name="Blood_Pressure">"血压"</string>
    <string name="Cancel">"取消"</string>
    <string name="Code">"验证码"</string>
    <string name="Continue">"下一步"</string>
    <string name="Error_Message_Measurement_Timeout">"您的测量数据无法发送
请检查您的网络连接并重新尝试"</string>
    <string name="Dismiss">"取消"</string>
    <string name="Email">"邮箱"</string>
    <string name="Error_Login_Email_Failed">"邮箱或密码错误，请重新尝试"</string>
    <string name="Failure">"错误提示"</string>
    <string name="Female">"女"</string>
    <string name="Grant_Camera_Access">"授予摄像头访问权限"</string>
    <string name="Get_Started">"开始测量"</string>
    <string name="Heart_Rate">"心率"</string>
    <string name="Landing_Chat_Bubble">"您好，我是Anura.
您的个人智能健
康助手"</string>
    <string name="History">"历史记录"</string>
    <string name="Landing_Login">"已注册账户"</string>
    <string name="Forgot_Password">"忘记密码？"</string>
    <string name="Log_In">"登录"</string>
    <string name="Log_Out">"退出登录"</string>
    <string name="Login_Facebook">"Facebook账户登录"</string>
    <string name="Login_Google">"Google账户登录"</string>
    <string name="Male">"男"</string>
    <string name="Mean_Arterial_Pressure">"平均动脉压力"</string>
    <string name="Measurement">"测量"</string>
    <string name="Measurement_Cancelled">"抱歉，测量已取消"</string>
    <string name="Error_Title_Measurement_Failed">"抱歉，测量不成功"</string>
    <string name="Title_Measurement_Countdown">"倒计时"</string>
    <string name="No">"取消"</string>
    <string name="Other">"其他"</string>
    <string name="Password">"密码"</string>
    <string name="Prompt_Password">"密码（请输入最少5个字符）"</string>
    <string name="Title_Reset_Password_Email">"请输入您的邮箱地址"</string>
    <string name="Error_Measurement_Constraint_Distance">"请靠近摄像头并重新测量"</string>
    <string name="Error_Measurement_Constraint_Gaze">"请重新测量并在整个测量期间保持正对摄像头"</string>
    <string name="Error_Measurement_Constraint_Movement">"请重新测量并在整个测量期间保持静止"</string>
    <string name="Error_Measurement_Constraint_Position">"请重新测量并在整个测量期间保持脸部在圆圈内"</string>
    <string name="Pulse_Pressure">"脉压"</string>
    <string name="Error_Title_Measurement_Timeout">"您的请求已超时"</string>
    <string name="Reset_Password">"重置密码"</string>
    <string name="Results">"测量报告"</string>
    <string name="Error_Message_Measurement_Failed">"抱歉，无法显示结果
请重新测量"</string>
    <string name="SNR">"信噪比"</string>
    <string name="Sending_Data">"正在发送数据"</string>
    <string name="Sign_Up">"注册"</string>
    <string name="Error_Title_SNR">"您的信号强度太弱"</string>
    <string name="Skip">"暂不注册信息"</string>
    <string name="Error_Measurement_Constraint_FPS">"抱歉，您的设备无法提供最低帧率"</string>
    <string name="Submit">"提交"</string>
    <string name="Success">"成功提示"</string>
    <string name="Error_Measurement_Constraint_Brightness">"画面太亮"</string>
    <string name="Error_Measurement_Constraint_Darkness">"画面太暗"</string>
    <string name="Error_Message_Analyzer_Failed">"抱歉，分析结果时发生错误
请重新测量"</string>
    <string name="Try_Again">"请重试"</string>
    <string name="You">"个人信息"</string>
    <string name="Message_Confirm_Skip_Profile">"提供个人信息将会使您的测量结果更准确"</string>
    <string name="bpm">"次/分"</string>
    <string name="cm">"厘米"</string>
    <string name="dia">"舒张压"</string>
    <string name="in">"英尺"</string>
    <string name="kg">"公斤"</string>
    <string name="lbs">"磅"</string>
    <string name="map">"平均动脉压"</string>
    <string name="mmHG">mmHg</string>
    <string name="pp">"脉压"</string>
    <string name="sys">"收缩压"</string>
    <string name="Loading">"正在加载"</string>
    <string name="Stress_Index">"心理压力值"</string>
    <string name="Error_Measurement_No_Network">"请确保您已连接到WiFi或移动网络"</string>
    <string name="View">"查看"</string>
    <string name="Error_No_Network">"无法连接网络"</string>
    <string name="Error_History_No_Network">"历史记录获取失败
请确保您已连接到WiFi或移动网络"</string>
    <string name="Add_Note">"添加记录"</string>
    <string name="Confirm_Password">"确认密码"</string>
    <string name="OK">"确认"</string>
    <string name="Saving">"正在保存"</string>
    <string name="Share">"分享"</string>
    <string name="Warning_Measurement_Constraint_Backlight">"背景光过亮 - 请改变位置和角度"</string>
    <string name="Warning_Measurement_Constraint_Brightness">"面部太亮 - 请降低亮度"</string>
    <string name="Warning_Measurement_Constraint_Distance">"面部距离屏幕太远 - 请靠近摄像头"</string>
    <string name="Warning_Measurement_Constraint_Position">"面部缺失 - 请置圈内"</string>
    <string name="Warning_Measurement_Constraint_Gaze">"面部偏斜 - 请正向面对摄像头"</string>
    <string name="Warning_Measurement_Constraint_Movement">"出现晃动 - 请保持静止"</string>
    <string name="View_Note">"查看记录"</string>
    <string name="Prompt_Enter_Note">"您可以填加您的个人记录，例如时间、地点以及您正在做的事情，配合测量结果，更清晰地了解您的个人心理状况，本记录可以随时查阅，供您个人参考"</string>
    <string name="Message_Empty_History">"尚无测量记录，请点击“圆圈”开始第一次测量"</string>
    <string name="Message_Measurement_Default">请把面部保持在白色脸型轮廓内</string>
    <string name="Message_Enterprise_Confirmation">请确认是否要加入 &lt;ENTERPRISE_NAME&gt;</string>
    <string name="Message_Study_Confirmation">请确认是否要加入研究项目 &lt;STUDY_NAME&gt;</string>
    <string name="Done">"完成"</string>
    <string name="Title_Add_Student">"请输入被测学生的手机号和学生号"</string>
    <string name="Login_WeChat">"微信登录"</string>
    <string name="Warning_Measurement_Constraint_Exposure">摄像头校准中…\n请保持静止</string>
    <string name="Save">"保存"</string>
    <string name="Student_ID">"学生号"</string>
    <string name="Error_Message_SNR">"此次测量效果不佳，请调整照明使光线均匀分布在面部，再试一次"</string>
    <string name="Message_Login_Landing">如需保存历史记录\n
请先登录</string>
    <string name="Error_Sign_Up_Email_Conflict">"该邮箱已注册，请尝试登录"</string>
    <string name="Error_Sign_Up_Phone_Conflict">"该手机号已注册，请尝试登录"</string>
    <string name="Error_Login_Phone_Failed">"手机号或密码错误，请重新尝试"</string>
    <string name="Error_Add_Student_Generic">"手机号或学生号错误，请检查后重新输入"</string>
    <string name="Verification">"身份验证"</string>
    <string name="Active_Profile">"当前账户"</string>
    <string name="Birth_Year">"出生年"</string>
    <string name="Gender">"性别"</string>
    <string name="Height">"身高"</string>
    <string name="Privacy_Policy">"隐私政策"</string>
    <string name="Profile">"账户"</string>
    <string name="Rate_App">"给Anura打分"</string>
    <string name="Title_Verification_Code_Resend">"重新发送验证码"</string>
    <string name="Settings">"设置"</string>
    <string name="Terms_of_Use">"使用条款"</string>
    <string name="Weight">"体重"</string>
    <string name="or_over_ios">"高于 %@"</string>
    <string name="or_under_ios">"低于 %@"</string>
    <string name="Add_Student">"添加学生"</string>
    <string name="Sign_Up_Agreement">"点击注册即表示您同意&lt;TERMS_OF_USE&gt;和&lt;PRIVACY_POLICY&gt;"</string>
    <string name="Mobile_Number">"手机号"</string>
    <string name="Skip_Confirm">"确认"</string>
    <string name="ID">"学生号"</string>
    <string name="Skip_Cancel">"取消"</string>
    <string name="Camera_Disclaimer">"敬请知悉，本应用将使用您的摄像头提取脸部血流数据用于分析。

本应用不适用于任何医疗用途，包括但不限于医疗建议或诊断。如果您有任何健康问题，请咨询符合资格的专业医生。

在手机运营商网络中使用本应用将产生额外的数据流量和相关费用。
"</string>
    <string name="Title_HR_Info_3">"高于正常范围－静息心率"</string>
    <string name="Anura_Stress_Index">"Anura心理压力值 (ASI)"</string>
    <string name="Error_Server_Connection">抱歉，无法连接到服务器</string>
    <string name="Title_HR_Info_1">"低于正常范围－静息心率"</string>
    <string name="Title_Stress_Info_5">"超载"</string>
    <string name="Disclaimer_Agreement">"点击下一步即表示您同意&lt;TERMS_OF_USE&gt;和&lt;PRIVACY_POLICY&gt;"</string>
    <string name="Title_Stress_Info_1">"非常放松"</string>
    <string name="TItle_Invalid_QR_Code">"二维码无效"</string>
    <string name="Title_HR_Info_2">"正常范围—静息心率"</string>
    <string name="Title_Stress_Info_3">"高效"</string>
    <string name="Title_Stress_Info_2">"放松"</string>
    <string name="State">状态:</string>
    <string name="Message_Invalid_QR_Code">"此二维码无效，请确保您扫描的二维码由Nuralogix官方提供"</string>
    <string name="Title_Stress_Info_4">"警惕"</string>
    <string name="Message_Stress_Info_1">"• ASI值＂极低＂表示你几乎没有心理压力，身心健康极佳。

• 你可能处于生活无忧或深度放松的状态。

• 但是，过于放松的心态可能使你有时无法集中足够的注意力从事日常活动，因为必要的压力是有正面作用的。"</string>
    <string name="pref_dfx_total_chunk_number">dfx_total_chunk_number</string>
    <string name="pref_dfx_duration_per_chunk">dfx_duration_per_chunk</string>
    <string name="pref_dfx_min_fps">dfx_min_fps</string>
    <string name="pref_dfx_dark_threshold">dfx_dark_threshold</string>
    <string name="pref_dfx_bright_threshold">dfx_bright_threshold</string>
    <string name="pref_dfx_back_light_threshold">dfx_back_light_threshold</string>
    <string name="pref_dfx_back_light_search_factor">dfx_back_light_search_factor</string>
    <string name="pref_dfx_back_light_max_pixels_pct">dfx_back_light_max_pixels_pct</string>
    <string name="pref_dfx_max_face_rotate_lr_deg">dfx_max_face_rotate_lr_deg</string>
    <string name="pref_dfx_max_face_rotate_ud_deg">dfx_max_face_rotate_ud_deg</string>
    <string name="pref_dfx_min_inter_pupil_dist_px">dfx_min_inter_pupil_dist_px</string>
    <string name="pref_dfx_max_face_movement_mm">dfx_max_face_movement_mm</string>
    <string name="pref_dfx_face_movement_window_ms">_dfx_face_movement_window_ms</string>
    <string name="pref_dfx_max_eyebrow_movement_mm">dfx_max_eyebrow_movement_mm</string>
    <string name="pref_dfx_camera_rotate_chunk_threshold">dfx_camera_rotate_chunk_threshold</string>
    <string name="pref_dfx_camera_rotate_window_threshold">dfx_camera_rotate_window_threshold</string>
    <string name="pref_dfx_check_min_fps_enabled">dfx_check_min_fps_enabled</string>
    <string name="pref_dfx_check_face_centered">dfx_check_face_centered</string>
    <string name="pref_dfx_check_face_distance">dfx_check_face_distance</string>
    <string name="pref_dfx_check_face_direction">dfx_check_face_direction</string>
    <string name="pref_dfx_check_lighting">dfx_check_lighting</string>
    <string name="pref_dfx_check_face_movement">dfx_check_face_movement</string>
    <string name="pref_dfx_check_back_light">dfx_check_back_light</string>
    <string name="pref_dfx_check_camera_movement">dfx_check_camera_movement</string>
    <string name="pref_dfx_check_eyebrow_movement">dfx_check_eyebrow_movement</string>
    <string name="step_one">Step 1：Please connect your Android device to your wireless router
        (i.e. the router to which you want the pressure mat to connect), then enter your router
        Password (SSID will be entered automatically here), then press "Add". This step records
        necessary router information.</string>
    <string name="step_two">Step 2：Please connect your Android device to "Matx" hotspot, then the
        pressure mat will be set to connect to the router. Please wait until the indicator light
        (in the hardware box) shows successful connection.</string>
    <string name="step_three">Step 3：Please connect your Android device to the router again, then
        your Android device will automatically search and find the pressure mat in LAN. When it is
        successfully found (both indicator light and eventbus will tell you), press
        "Next(Heatmap)" or "Next(Number)" to receive data.</string>
    <string name="enter_passwd">Please enter password</string>
    <string name="add">Add</string>
</resources>