<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/step_one"/>

        <TextView
            android:id="@+id/ssid_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="15"
            android:background="@android:drawable/edit_text"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_passwd"/>

        <Button
            android:id="@+id/net_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/add"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/step_two"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/step_three"/>

        <TextView
            android:id="@+id/snum_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:drawable/edit_text"
            android:maxLength="15"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/heatmap"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="连接"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/log_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
